kubernetes/main/apps/database/emqx/cluster/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.30.0-standalone-strict/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://emqx.${SECRET_DOMAIN}"
    gethomepage.dev/description: Scalable MQTT broker solution
    gethomepage.dev/group: Utilities
    gethomepage.dev/icon: emqx
    gethomepage.dev/name: EMQX
    gethomepage.dev/app: emqx-operator
spec:
  ingressClassName: internal
  rules:
    - host: emqx.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
